# extrinsicCalib_LidarCamera

./: .gitignore  ArUcoBoardModule.py  LidarDataProcessor.py  README.md  data_loader.py  extrinsicCalib_LidarCamera.py  extrinsicCalib_LidarCamera_v1.py  intrinsicCalib.py  pyproject.toml  rerun_viz.py  test.py  test_opencv_aruco.py  utils_annotation.py
boardMaker/: calibration_board_config.yaml  calibration_board_withparam.py
config/: calibration_board_config.yaml  cam0.yaml  lidar_processor.yaml
extrinsicCalibration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
