[project]
name = "extrinsicCalibration"
version = "0.1.0"
description = "Extrinsic calibration using ArUco boards with OpenCV"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=2.0,<3.0",
  "opencv-contrib-python>=4.8,<5",
  "rerun-sdk==0.29.1",
  "pyyaml==6.0.3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
